fix(page-detail): z-index issue resolved

--- a/assets/scss/pages/_detail.scss
+++ b/assets/scss/pages/_detail.scss
@@ -8,6 +8,38 @@ $page-detail-subline-left-spacing: calc(#{$header-floating-inner-padding-x} + ((
 $page-detail-subline-background-color: $white-30;
 
 .page-detail {
+  &::before {
+    z-index: -1;
+  }
+}
+
+.page-detail__content {
+  z-index: 2;
+
+  &::before {
+    z-index: -1;
+  }
+}
+
+.page-detail__sticky-start {
+  z-index: 3;
+}
+
+.page-detail__subline {
+  &.page-detail__subline--overlapped {
+    z-index: 4;
+  }
+}
+
+.page-detail__subline-background {
+  z-index: 5;
+}
+
+.page-detail__subline-foreground {
+  z-index: 6;
+}
+
+.page-detail {
   min-height: 100vh;
   position: relative;
 
@@ -95,7 +127,6 @@ $page-detail-subline-background-color: $white-30;
     height: 100%;
     width: 100%;
     background-color: var(--page-detail-color);
-    z-index: 0;
     box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.12);
 
     @include media-breakpoint-up(md) {
@@ -183,7 +214,6 @@ $page-detail-subline-background-color: $white-30;
     height: calc(100% + #{spacing(10)});
     width: 101vw;
     background-color: var(--color-white);
-    z-index: -1;
   }
 
   @include media-breakpoint-up(lg) {
@@ -253,6 +283,8 @@ $page-detail-subline-background-color: $white-30;
   margin-right: 30px;
   margin-left: calc((100vw - var(--container-width)) / 2);
   margin-bottom: spacing(50);
+
+  // TODO figure out how to position this at the bottom of the image
 }
 
 .page-detail__sticky-start {
@@ -269,7 +301,6 @@ $page-detail-subline-background-color: $white-30;
   &.page-detail__subline--overlapped {
     position: absolute;
     left: 0;
-    z-index: 1;
     bottom: 0;
 
     @include media-breakpoint-up(md) {
@@ -300,7 +331,6 @@ $page-detail-subline-background-color: $white-30;
   background-color: $page-detail-subline-background-color;
   width: 100%;
   height: 100%;
-  z-index: -1;
 
   &::after,
   &::before {
@@ -325,7 +355,6 @@ $page-detail-subline-background-color: $white-30;
 
 .page-detail__subline-foreground {
   position: relative;
-  z-index: 1;
   margin: spacing(2) spacing(4) spacing(2) 0;
 }
 
